# pgrepbot

./: .codecov.yml  .env.example  .gitignore  .hadolint.yaml  .pymarkdown  .shellcheckrc  Dockerfile  Makefile  README.md  cookies.txt  docker-compose.dev.yml  docker-compose.services.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.kiro/specs/postgres-replication-manager/: design.md  requirements.md  tasks.md
app/: __init__.py  dependencies.py  main.py
app/api/: __init__.py  alerts.py  auth.py  aws.py  database_config.py  databases.py  migrations.py  models_test.py  replication.py
app/middleware/: auth.py
app/models/: __init__.py  alerts.py  auth.py  database.py  migration.py  replication.py
app/services/: alerting.py  auth.py  aws_elasticache.py  aws_rds.py  aws_secrets.py  background_tasks.py  postgres_connection.py  replication_discovery.py  replication_management.py  replication_monitoring.py
app/static/css/: main.css
app/static/js/: main.js  topology.js
app/templates/: base.html  dashboard.html  login.html
app/utils/: __init__.py  redis_serializer.py
docker-init/: 02-setup-replication.sh  configure-auth.sh  configure-primary-auth.sh  pg_hba.conf  primary-init.sql  replica-init.sql  setup-pg-hba.sh  setup-physical-replica.sh  setup-subscription.sh
localstack-init/: setup-secrets.sh  setup.sh
scripts/: generate_test_data.py  setup-dev.sh  setup-replica.sql  setup-replication.sql  setup_test_replication.py  validate.py
tests/: __init__.py  conftest.py  test_alerting_integration.py  test_auth.py  test_aws_integration.py  test_comprehensive.py  test_database_api.py  test_main.py  test_models.py  test_postgres_connection.py  test_replication_api.py  test_replication_discovery.py  test_replication_management.py
